# while_language

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  while_language.sln  while_language.vcxproj  while_language.vcxproj.filters
include/: concepts.h  error.h  identifiers.h  lex_analise.h
include/error/: ErrorSyntax.h  error.h
include/lex/: NextElement.h  lex_analise.h
include/syntax/: Node.h  expression.h  expression.ixx  format.h  predicates.h  statement.h  structure.h  syntax.h  syntax_base.h  types.h  variable.ixx
src/: error.cpp  lex_analise.cpp  main.cpp
src/error/: error.cpp
src/lex/: NextElement.cpp  lex_analise.cpp
src/syntax/: expression.cpp  predicates.cpp  statement.cpp  structure.cpp  syntax.cpp  types.cpp
test/: syntax_test_if_basic.cpp  test_if_basic.cpp  test_while_basic.cpp
